[FEATURE][PERMISSIONS] Camera and Biometric permissions was added

--- a/SwiftUI_23_TouchId_FaceId/Info.plist
+++ b/SwiftUI_23_TouchId_FaceId/Info.plist
@@ -56,5 +56,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Necesitamos tu faceId</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Escanear QR</string>
 </dict>
 </plist>
